--- a/views/home.ejs
+++ b/views/home.ejs
@@ -58,7 +58,7 @@
                     <img src="../css/image/demo5.jpg" alt="">
                 </div>
                 <hr> -->
-                <% posts.forEach((post)=>{ %>
+                <!-- <% posts.forEach((post)=>{ %>
                 <div class="post-1">
                     <p> <%=post.title %> <a href="/<%=category %>/<%=post.title %>" class="read-link">read full
                             article</a></p>
@@ -66,7 +66,7 @@
 
                 </div>
                 <hr>
-                <% }); %>
+                <% }); %> -->
 
             </div>
         </div>
@@ -78,12 +78,12 @@
                     <p>Lorem ipsum dolor sit amet.</p>
                 </div> -->
 
-                <% posts.forEach((post)=>{ %>
+                <!-- <% posts.forEach((post)=>{ %>
                 <div class="post-2">
                     <a href="/<%= category %>/<%= post.title%>"><img src="<%= post.img %>" alt=""></a>
                     <p><%= post.title %></p>
                 </div>
-                <% }); %>
+                <% }); %> -->
             </div>
         </div>
 
