--- a/views/header.ejs
+++ b/views/header.ejs
@@ -20,25 +20,32 @@
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
 
             <a class="navbar-brand" href="/">Daily News</a>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link link-active" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Sports">Sports</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Bollywood">Bollywood</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/Fitness">Fitness</a>
-                </li>
-                <li class="nav-item">
-                    <button class="btn btn-outline-warning btn-md" data-toggle="modal" data-target="#modalLoginForm">
-                        Connect</button>
-                </li>
-            </ul>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link link-active" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Sports">Sports</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Bollywood">Bollywood</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Fitness">Fitness</a>
+                    </li>
+                    <li class="nav-item">
+                        <button class="btn btn-outline-warning btn-md" data-toggle="modal"
+                            data-target="#modalLoginForm">
+                            Connect</button>
+                    </li>
+                </ul>
+            </div>
 
         </nav>
     </section>
