--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -27,7 +27,7 @@
         </div>
 
         <div class="copyright">
-            all copyright reserved @Dipanshu & his friend
+            all copyright reserved @Dipanshu & @Vaishnavi
         </div>
     </div>
 </section>
